clusters/homelab-k8s/apps/cert-manager/web-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: web-app.<YOUR_DOMAIN>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              number: 80
  tls:
  - hosts:
    - web-app.<YOUR_DOMAIN>
    secretName: web-app-<YOUR_DOMAIN>-tls
